Resolves: tdf#115951 wrong entry selected for numbering pos

Change-Id: I4e317abb3cfceee2de4826f967a27d14fb3878ef